# Peptabase

./: .gitignore  Cargo.toml  MM04.js  package-lock.json  schema.sql
migrations/: 0001_aptamer.sql
src/: main.rs
src/admin/: mod.rs  view.rs
src/auth/: jwt.rs  login.rs  mod.rs  register.rs
src/static/: about.css  about.html  add.html  add.js  admin.css  admin.html  approve.css  approve.html  approve.js  comments.css  comments.html  comments.js  contact.css  contact.html  contact.js  data.js  database.css  database.html  database.js  edit.html  edit.js  images.html  images.js  index.css  index.html  login.js  mod.rs  redirect_links.css  redirect_links.html  search.js  submit.css  submit.html  submit.js
src/view/: insert.rs  mod.rs  simple_fetch.rs
