[package]
name = "aptabase"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
shuttle-actix-web = "0.42.0"
shuttle-runtime = "0.42.0"
serde = "1.0.197"
shuttle-shared-db = { version = "0.42.0", features = ["postgres", "sqlx"] }
sqlx = "0.7.4"
tokio = "1.26.0"
serde_json = "1.0.114"
serde_derive = "1.0.197"
actix-cors = "0.7.0"
actix-files = "0.6.5"
bcrypt = "0.15.0"
futures = "0.3.30"
jsonwebtoken = "9.2.0"
chrono = "0.4.35"